salesforce-main/src/main/default/objects/Bank_Statement__c/Bank_Statement__c.object-meta.xml
<CustomObject>
    <description>A visual representation of a Bank Statement.</description>
    <label>Bank Statement</label>
    <nameField>
        <displayFormat>BS-{00000}</displayFormat>
        <label>Bank Statement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>