salesforce-main/src/main/default/objects/Bank_Statement__c/fields/BPP_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>BPP_Bank_Account_Name__c</fullName>
    <label>BPP Bank Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>