salesforce-main/src/main/default/objects/Bank_Statement__c/fields/BPP_Bank_Account_No__c.field-meta.xml
<CustomField>
    <fullName>BPP_Bank_Account_No__c</fullName>
    <label>BPP Bank Account No.</label>
    <length>8</length>
    <type>Text</type>
</CustomField>