salesforce-main/src/main/default/objects/Bank_Statement__c/fields/BPP_Bank_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>BPP_Bank_Sort_Code__c</fullName>
    <label>BPP Bank Sort Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>