salesforce-main/src/main/default/objects/Bank_Statement__c/fields/Credit_Entries__c.field-meta.xml
<CustomField>
    <fullName>Credit_Entries__c</fullName>
    <label>Credit Entries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>