salesforce-main/src/main/default/objects/Bank_Statement__c/fields/Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>Sequence_No__c</fullName>
    <label>Sequence No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>