salesforce-main/src/main/default/objects/Bank_Statement__c/fields/Statement_From__c.field-meta.xml
<CustomField>
    <fullName>Statement_From__c</fullName>
    <label>Statement From</label>
    <type>DateTime</type>
</CustomField>