salesforce-main/src/main/default/objects/Bank_Statement__c/fields/Statement_ID__c.field-meta.xml
<CustomField>
    <fullName>Statement_ID__c</fullName>
    <label>Statement ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>