salesforce-main/src/main/default/objects/Bank_Statement__c/fields/Statement_To__c.field-meta.xml
<CustomField>
    <fullName>Statement_To__c</fullName>
    <label>Statement To</label>
    <type>DateTime</type>
</CustomField>