salesforce-main/src/main/default/objects/Bank_Statement__c/fields/Total_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Credits__c</fullName>
    <label>Total Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>