salesforce-main/src/main/default/objects/Bank_Statement__c/validationRules/Validate_Bank_Sort_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Bank_Sort_Code</fullName>
    <active>true</active>
    <description>Format Bank Sort Code to XX-XX-XX</description>
    <errorConditionFormula>NOT(
REGEX(BPP_Bank_Sort_Code__c , &quot;([0-9]{2}-[0-9]{2}-[0-9]{2})&quot;)
)</errorConditionFormula>
    <errorDisplayField>BPP_Bank_Sort_Code__c</errorDisplayField>
    <errorMessage>Please follow the correct format: &quot;XX-XX-XX&quot;</errorMessage>
</ValidationRule>